# soccer-ref

./: CMakeLists.txt  README.md  package.xml
launch/: referee.launch  simref.launch  usb_cam.launch
msg/: GameState.msg
nodes/gui/: Referee.py  Team.py  gui.py  window.ui
nodes/referee/: Referee.py  Team.py  referee.py  referee_node.py  window.ui
param/: settings.yaml
scripts/: referee.py  referee_node.py
src/: vision.cpp
